[package]
name = "halimede"
description = "quickly spin up a new project"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/halimede"
repository = "https://github.com/EthanJustice/halimede"
license = "MIT"
publish = false

[dependencies]
clap = "~2.33.3"
directories = "~3.0.1"
walkdir = "~2.3.1"